Fix spacing issue

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -669,7 +669,7 @@ figure {
 /* ---------- */
 
 .blog-post {
-  padding-bottom: 24px; 
+  padding-bottom: 35px; 
 }
 
 .blog-header {
